letter spacing fix

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
         drop-shadow(var(--name-stroke) var(--name-stroke-min) 0 #000)
         drop-shadow(var(--name-stroke) var(--name-stroke) 0 #000)
         drop-shadow(var(--name-stroke-min) var(--name-stroke) 0 #000);
-    letter-spacing: 4px;
+    letter-spacing: var(--message-stroke);
 }
 .message, .colon {
 	text-shadow: 
@@ -31,6 +31,6 @@
         0                         var(--message-stroke)     0    #000,
         var(--message-stroke-min) var(--message-stroke)     0    #000,
         var(--message-stroke-min) 0                         0    #000;
-    letter-spacing: 4px;
+    letter-spacing: var(--message-stroke);
     filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.5));
 }
